--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Suburbs Directory listing of businesses in Cape Town">
+  <meta name="description" content="Boredom busters child psychology - busy off-Line">
   <meta name="robots" content="index, follow">
   <title>
     <%= title %>
@@ -27,8 +27,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-dark fixed-top" style=" color: white">
-
+  <nav class="navbar navbar-expand-lg bg-dark fixed-top" style=" color: white; background-color: #305f72">
+      <!-- bg-dark -->
     <a class="navbar-brand" href="/" style="color: white">Boredom Busters</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,60 +38,35 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-              <a class="nav-link" href="/about" tabindex="-1" style="color: white">About</a>
-            </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="false" aria-expanded="true" style="color: white">
-            Products
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: lightgray">
-            <a class="dropdown-item" href="#" style="font-weight: bold;">Suburbs</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#" style="background-color: #f5c23d;">Atlantic Seaboard</a>
-            
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Package Options</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Terms & Conditions</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="false" aria-expanded="true" style="color: white">
-            Another Menu 
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: lightgray">
-            <a class="dropdown-item" href="#" style="font-weight: bold;">Other Suff</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#" style="background-color: #f5c23d;">More Stuff</a>
-      
-            <div class="dropdown-divider"></div>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="false" aria-expanded="true" style="color: white">
-            Charity
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: lightgray">
-            <a class="dropdown-item" href="#" style="font-weight: bold;">Different Stuff</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#" style="background-color: #f5c23d;">More Stuff</a>
-        
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Suggest Some Stuff</a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link" href="/shop" style="color: white">Shopping</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" style="color: white">Sign Up Newsletter</a>
+          <a class="nav-link" href="/terms" style="color: white">T's & C's</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/science" style="color: white">Science</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/mailingList" style="color: white">Mailing List</a>
+        </li>
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#" style="color: white">Contact</a>
+        </li> -->
+        <!-- <li class="nav-item">
+          <a class="nav-link" href="/about" tabindex="-1" style="color: white">About</a>
+        </li> -->
+      </ul>
+      <ul class="navbar-nav mr-right">
+          <li class="nav-item">
+              <a class="nav-link" href="/contact" style="color: white">Contact</a>
+            </li>
+            <li class="nav-item">
+              
+              </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about" tabindex="-1" style="color: white; margin-right: 3rem;">About</a>
         </li>
       </ul>
-      
-      
     </div>
   </nav>
