--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,18 @@
 <div class="container col-md-8" id="" style="width: 100%; display: flex; justify-content: center; margin-top: 55px; min-height: 95vh;">
 
   <div id="" style="margin: 50px 0px;" class="mainbox col-md-12"
-    style="width: 100vw; display: flex; justify-content: center; margin-top: 55px">
-    <h1 style="text-align: center">Boredom Buster's</h1>
-    <br>
-    <h2 class="text-center" style="margin-top: 20px;">Children. Art. Craft. Education. Psychology</h2>
-    <div id="homeImageDiv">
-      <img id="homeImg" src="/images/image16.png" hidefocus="true">
+    style="width: 100%; display: flex; justify-content: center; margin-top: 55px">
+    <h1 style="text-align: center"><img src="/images/heart_PNG51352.png" alt="Logo" style="width: 60px;">Boredom Buster's</h1>
+    
+    <h2 class="text-center" style="margin-top: 20px;">Children. Art. Craft. Education. Psychology</h2><hr>
+    <div style="display: flex; justify-content: space-evenly; margin-top: 20px;">
+      <a class="btn btn-primary boredomBtn"  style="width: 120px; box-shadow: 2px 4px #aaa;" href="/shop">Shop</a>
+      <a class="btn btn-primary boredomBtn"  style="width: 120px;box-shadow: 2px 4px #aaa;" href="/about">About</a>
+      <a class="btn btn-primary boredomBtn"  style="width: 120px;box-shadow: 2px 4px #aaa;" href="/contact">Contact</a>
+      <a class="btn btn-primary boredomBtn"  style="width: 120px;box-shadow: 2px 4px #aaa;" href="/mailingList">Get News</a>
+    </div>
+    <div  id="homeImageDiv">
+      <img  style="box-shadow: 2px 4px #aaa;"" id="homeImg" src="/images/image16.png" hidefocus="true">
     </div>
     
   </div>
