--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,10 +17,11 @@
   <script src="/jQuery/jquery-3.3.1.min.js"></script>
   <script src="/jQuery/jquery-ui.min.js"></script>
   <link rel="stylesheet" href="/styles/jquery-ui.css">
-  <link rel="shortcut icon" href="/images/recoloredSuburbs.png">
+  <link rel="shortcut icon" href="/images/heart_PNG51352.png">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <script src="/jQuery/jquery.ui.touch-punch.min.js"></script>
   <script src="/Bootstrap/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
   <script src="../js/main.js"></script>
 
 
@@ -29,7 +30,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-dark fixed-top" style=" color: white; background-color: #305f72">
       <!-- bg-dark -->
-    <a class="navbar-brand" href="/" style="color: white">Boredom Busters</a>
+    <a class="navbar-brand" href="/" style="color: white"><img src="/images/heart_PNG51352.png" alt="Logo" style="width: 30px;">Boredom Busters</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 
@@ -67,6 +68,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/about" tabindex="-1" style="color: white; margin-right: 3rem;">About</a>
         </li>
+        <!-- <li class="nav-item">
+          <button id="night" class="btn btn-outline-success my-2 my-sm-0" type="submit">Night Mode</button>
+        </li> -->
       </ul>
     </div>
   </nav>
