--- a/views/menuViews/paymentSuccessful.ejs
+++ b/views/menuViews/paymentSuccessful.ejs
@@ -2,9 +2,12 @@
 <section class="about-us" id="about" style="margin-top: 65px; width: 100%; min-height: 80vh;">
     <div class="container checkoutForm" style="align-content: center; width: 75%;">
         <br><br>
-        <h1  id="heading" style="text-align: center;">Payment Succesful!</h1>
+        <h1  id="heading" style="text-align: center;"><img src="/images/heart_PNG51352.png" alt="Logo" style="width: 60px;">Payment Succesful!</h1> 
+        <br><br><br>
+        <p style="text-align: center">Thank you for your order.</p> 
 
-         
+        <p style="text-align: center">Your order has been placed. Postnet will Contact you when it arrives.</p><br> 
+        <p style="text-align: center">Your invoice has been emailed to you.</p> 
     </div>
 </section>
 
