--- a/views/menuViews/store.ejs
+++ b/views/menuViews/store.ejs
@@ -4,7 +4,7 @@
         <br><br>
         <div class="row">
             <div class="col-md-12 col-xs-12 text-center">
-                <h1 class="section-title">Come Shop with us!</h1>
+                <h1 class="section-title"><img src="/images/heart_PNG51352.png" alt="Logo" style="width: 60px;">Come Shop with us!</h1>
                 <h6>South Africa Only!!</h6>
             </div>
 
